send data to the server

--- a/static/index.html
+++ b/static/index.html
@@ -39,11 +39,15 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
             try {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
-                    // Torben, https://stackoverflow.com/questions/1973140/parsing-json-from-xmlhttprequest-responsejson
-                    var json_response = JSON.parse(xhr.responseText);
-                    //XXX: Pass the data to the callback!
-                    // https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/response
-                    callback(json_response);
+
+                    try {
+                        // Torben, https://stackoverflow.com/questions/1973140/parsing-json-from-xmlhttprequest-responsejson
+                        var json_response = JSON.parse(xhr.responseText);
+                        // https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/response
+                        callback(json_response);
+                    } catch {
+                        callback(xhr.responseText);
+                    }
                 }
             } 
             catch(e) {
@@ -145,8 +149,8 @@ function addEntity(entity, data) {
     world[entity] = data;
     console.log(entity, data)
     drawNextFrame(); // (but should we?)
-    //XXX: Send a XHTML Request that updates the entity you just  modified!
 
+    sendJSONXMLHTTPRequest("/entity/"+entity, data, function() {})
 }
 
 var counter = 0;
